--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="images/favicon-637f9fd6.ico" rel="icon" type="image/ico" />
         <meta
             name="description"
-            content="Documentation for the Kittn API"
+            content="Documentation for the Esoko API Integration with MTN Mobile App"
         >
     <title>Esoko API Reference</title>
 
